Module Routing, Component routing working now

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<a routerLink="/loginmodule">login</a>
+<!-- <a routerLink="/loginmodule">login</a> -->
+{{title}}
+  - <a href="/loginmodule">login</a>
+  - <a href="/registermodule">register</a>
+  - <a href="">home</a>
 <router-outlet></router-outlet>
